1575687264 | 96 files | M bin/version.txt,  M content/panorama/localization/tenfoot_brazilian.txt,  M content/panorama/localization/tenfoot_bulgarian.txt,  M content/panorama/localization/tenfoot_czech.txt,  M content/panorama/localization/tenfoot_danish.txt,  M content/panorama/localization/tenfoot_dutch.txt,  M content/panorama/localization/tenfoot_finnish.txt,  M content/panorama/localization/tenfoot_french.txt,  M content/panorama/localization/tenfoot_german.txt,  M content/panorama/localization/tenfoot_greek.txt,  M content/panorama/localization/tenfoot_hungarian.txt,  M content/panorama/localization/tenfoot_italian.txt,  M content/panorama/localization/tenfoot_japanese.txt,  M content/panorama/localization/tenfoot_korean.txt,  M content/panorama/localization/tenfoot_koreana.txt,  M content/panorama/localization/tenfoot_latam.txt,  M content/panorama/localization/tenfoot_norwegian.txt,  M content/panorama/localization/tenfoot_polish.txt,  M content/panorama/localization/tenfoot_portuguese.txt,  M content/panorama/localization/t
https://steamdb.info/patchnotes/4469254/

--- a/content/panorama/localization/tenfoot_brazilian.txt
+++ b/content/panorama/localization/tenfoot_brazilian.txt
@@ -655,7 +655,7 @@
 "VRSettingsCamera_RoomViewMode_VideoOpaque"	"Opaco"
 "[english]VRSettingsCamera_RoomViewMode_VideoOpaque"	"Opaque Pass-Through"
 "VRSettingsBindingUITitle"	"Configuração do controle"
-"[english]VRSettingsBindingUITitle"	"Controller Binding"
+"[english]VRSettingsBindingUITitle"	"Controller Settings"
 "VRSettingsTrackerUITitle"	"Gerenciar rastreadores do Vive"
 "[english]VRSettingsTrackerUITitle"	"Manage Vive Trackers"
 "Panorama_Lang_Latam_Spanish"	"Espanhol (América Latina)"
@@ -670,4 +670,6 @@
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
 "App_Not_Responding"	"Esperando resposta do aplicativo"
 "[english]App_Not_Responding"	"Waiting for application to respond"
+"VRSettingsDisplaySettingsTitle"	"Exibir configurações"
+"[english]VRSettingsDisplaySettingsTitle"	"Display Settings"
 }
