--- a/content/panorama/localization/tenfoot_swedish.txt
+++ b/content/panorama/localization/tenfoot_swedish.txt
@@ -619,7 +619,7 @@
 "[english]Transition_Progress_Description"	"WAITING FOR..."
 "Now_Waiting"	"VÄNTAR..."
 "[english]Now_Waiting"	"WAITING..."
-"HomeAppCheck"	"Förbättrade SteamVR-miljöer"
+"HomeAppCheck"	"SteamVR Home"
 "[english]HomeAppCheck"	"SteamVR Home"
 "HomeAppDesc"	"De nya SteamVR-miljöerna har stöd för detaljrikare hemutrymmen, sociala funktioner, med mera. Gå med i testet och ge feedback på SteamVR-forumen."
 "[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
@@ -649,8 +649,8 @@
 "[english]VRSettingsCamera_RoomViewMode_EdgeA"	"Colored Edges"
 "VRSettingsCamera_RoomViewMode_VideoTransluscent"	"Genomskinlig övergång"
 "[english]VRSettingsCamera_RoomViewMode_VideoTransluscent"	"Translucent Pass-Through"
-"VRSettingsBindingUITitle"	"Kontrollbindning"
-"[english]VRSettingsBindingUITitle"	"Controller Binding"
+"VRSettingsBindingUITitle"	"Kontrollinställningar"
+"[english]VRSettingsBindingUITitle"	"Controller Settings"
 "VRSettingsTrackerUITitle"	"Hantera Vive Trackers"
 "[english]VRSettingsTrackerUITitle"	"Manage Vive Trackers"
 "Panorama_Lang_Latam_Spanish"	"Latam"
@@ -663,6 +663,6 @@
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
 "BindingCallout_Header"	"VISA KONTROLLER"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
-"App_Not_Responding"	"Applikation svarar ej..."
+"App_Not_Responding"	"Väntar på att applikationen ska svara"
 "[english]App_Not_Responding"	"Waiting for application to respond"
 }
