--- a/content/vrmonitor/translations/vrmonitor_brazilian.txt
+++ b/content/vrmonitor/translations/vrmonitor_brazilian.txt
@@ -569,7 +569,7 @@
 "[english]PerfTestResults_BestCPU"	"Best: %1\n"
 "PerfTestResults_Graphs"	"Os gráficos abaixo exibem o desempenho com o tempo. Barras vermelhas são quadros descartados.\n"
 "[english]PerfTestResults_Graphs"	"The graphs below show performance over time. Red bars are dropped frames.\n"
-"PerfTestResults_Graph1"	"O 1º gráfico é da taxa de quadros. Um resultado acima da linha azul (90qps) é bom.\n"
+"PerfTestResults_Graph1"	"O 1º gráfico é da taxa de quadros. Um resultado acima da linha azul (90 QPS) é bom.\n"
 "[english]PerfTestResults_Graph1"	"Graph #1 is FPS. Above the blue line (90fps) is good.\n"
 "PerfTestResults_Graph2"	"O 2º gráfico é o tempo gasto (em ms) por quadro pela CPU. Um resultado abaixo da linha azul (11ms) é bom.\n"
 "[english]PerfTestResults_Graph2"	"Graph #2 is CPU ms/frame. Below the blue line (11ms) is good.\n"
@@ -579,7 +579,7 @@
 "[english]PerfTestResults_Frame"	"Frame Results"
 "PerfTestResults_GPU"	"GPU:"
 "[english]PerfTestResults_GPU"	"GPU:"
-"PerfTestResults_GraphGPU"	"(Abaixo da linha azul de 90qps é bom. Barras vermelhas são quadros descartados.)"
+"PerfTestResults_GraphGPU"	"(Abaixo da linha azul de 90 QPS é bom. Barras vermelhas são quadros descartados.)"
 "[english]PerfTestResults_GraphGPU"	"(Above the 90fps blue line is good. Red bars are dropped frames.)"
 "PerfTestResults_CPU"	"CPU:"
 "[english]PerfTestResults_CPU"	"CPU:"
@@ -835,7 +835,7 @@
 "[english]PerfTestResults_LabelFPS"	"Frames per Second"
 "PerfTestResults_LabelFidelityLevel"	"Nível de fidelidade"
 "[english]PerfTestResults_LabelFidelityLevel"	"Fidelity Level"
-"PerfTestResults_Label90FPS"	"Corte de 90qps"
+"PerfTestResults_Label90FPS"	"Corte de 90 QPS"
 "[english]PerfTestResults_Label90FPS"	"90fps Cutoff"
 "PerfTestResults_FramesDropped"	"Quadros descartados:"
 "[english]PerfTestResults_FramesDropped"	"Frames Dropped:"
@@ -2429,5 +2429,11 @@
 "[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
 "BS_PromotePowerManagement_ExitNow"	"Sair agora (%1)"
 "[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
+"FirmwareWizard_UpdateType_WatchmanV3PeripheralUpdate"	"Atualização de dispositivo periférico"
+"[english]FirmwareWizard_UpdateType_WatchmanV3PeripheralUpdate"	"Peripheral Device Update"
+"BS_PowerManagement_Identify"	"Clique para identificar a estação base."
+"[english]BS_PowerManagement_Identify"	"Click to identify Base Station."
+"BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 requer uma atualização para ativar a identificação de dispositivos."
+"[english]BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 }
 }
