--- a/content/vrmonitor/translations/vrmonitor_dutch.txt
+++ b/content/vrmonitor/translations/vrmonitor_dutch.txt
@@ -2076,6 +2076,8 @@
 "[english]Settings_GpuInfo_GpuSpeed"	"GPU Measured Speed"
 "Settings_GpuInfo_Current"	"De huidige instelling rendert elk oog op"
 "[english]Settings_GpuInfo_Current"	"The current setting renders each eye at"
+"Settings_GpuInfo_Recommended"	"De aanbevolen instelling voor je GPU en headset is"
+"[english]Settings_GpuInfo_Recommended"	"The recommended setting for your GPU and headset is"
 "FrameTiming_MisPresented"	" --- Hergeprojecteerd"
 "[english]FrameTiming_MisPresented"	" --- Reprojected"
 "FrameTiming_FirstView"	" --- Eerst bekeken"
@@ -2130,7 +2132,7 @@
 "[english]Settings_BaseStation_BaseStation20"	"Base Station 2.0"
 "Settings_Advanced_MotionReprojection_Header"	"Bewegingsherprojectie"
 "[english]Settings_Advanced_MotionReprojection_Header"	"Motion Reprojection"
-"Settings_Advanced_MotionReprojection_Description"	"SteamVR synthetiseert nieuwe beelden voor een goede beleving, mocht de lopende toepassing problemen met de beeldsnelheid hebben."
+"Settings_Advanced_MotionReprojection_Description"	"SteamVR synthetiseert nieuwe beelden voor een goede ervaring als de lopende toepassing problemen met de beeldsnelheid heeft."
 "[english]Settings_Advanced_MotionReprojection_Description"	"SteamVR synthesizes new frames to maintain a good experience when the running application cannot make framerate."
 "Settings_Advanced_MotionReprojection"	"Bewegingsherprojectie inschakelen"
 "[english]Settings_Advanced_MotionReprojection"	"Enable Motion Reprojection"
@@ -2318,6 +2320,8 @@
 "[english]Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Fix an interrupted or cancelled base station update that is preventing it from tracking normally."
 "FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"Voordat de update kan doorgaan, moet dit basisstation opnieuw optisch gedetecteerd worden door SteamVR te herstarten."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"This Base Station needs to be rediscovered optically by a restart of SteamVR before the update can proceed."
+"FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"Voordat het bijwerken kan plaatsvinden, dient dit basisstation herstart en opnieuw optisch gedetecteerd te worden door SteamVR te herstarten. Verwijder de stroomkabel uit het basisstation en sluit deze daarna opnieuw aan."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"This Base Station needs to be power cycled and rediscovered optically by a restart of SteamVR before the update can proceed. Please unplug and then replug the Base Station's power cable."
 "FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"Dit basisstation heeft een nieuwere versie van de update en heeft deze geweigerd. Sluit de stroomkabel van het basistation opnieuw aan."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"This Base Station has a newer version of the update and has rejected it. Please unplug and then replug the Base Station's power cable."
 "FirmwareWizard_UpdateBasestationWireless_Fail_ClickRetry"	"Klik hieronder op 'Opnieuw proberen' om het nogmaals te proberen."
@@ -2472,6 +2476,8 @@
 "[english]BS20_ConfigureChannel_AutomaticConfiguration"	"Automatic Configuration"
 "BS20_ConfigureChannel_AutoConfig_NoChannelConflictsFound"	"Er zijn geen kanaalconflicten."
 "[english]BS20_ConfigureChannel_AutoConfig_NoChannelConflictsFound"	"There are no channel conflicts."
+"BS20_ConfigureChannel_AutoConfig_NoFreeChannels"	"Er zijn geen kanalen beschikbaar om potentiële kanaalconflicten van %1 op te lossen. Je moet mogelijk kanalen handmatig configureren."
+"[english]BS20_ConfigureChannel_AutoConfig_NoFreeChannels"	"There are no free channels to resolve %1 potential channel conflicts. You may need to manually configure channels."
 "BS20_ConfigureChannel_AutoConfigContinue"	"Er zijn %1 potentiële kanaalconflicten die automatisch opgelost kunnen worden door kanalen opnieuw toe te wijzen. Doorgaan en conflicten oplossen?"
 "[english]BS20_ConfigureChannel_AutoConfigContinue"	"There are %1 potential channel conflicts that can be automatically resolved by re-assigning their channels. Continue and resolve conflicts?"
 "BS20_ConfigureChannel_AutoConfig_SuccessfulCompletion"	"Automatische configuratie voltooid.\n\nEr zijn geen kanaalconflicten."
@@ -2548,6 +2554,10 @@
 "[english]Settings_PerApplication_Reprojection_Checkbox"	"Use legacy reprojection mode"
 "Settings_PerApplication_Reprojection_Description"	"Als je deze optie aanvinkt, wordt asynchrone herprojectie voor deze titel uitgeschakeld."
 "[english]Settings_PerApplication_Reprojection_Description"	"Checking this option will disable asynchronous reprojection for this title."
+"FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"Een onverwachte USB-verbinding met het basisstation voorkomt het draadloos bijwerken.<br><br><font color=#aaaa00>Ontkoppel de USB-kabel die is aangesloten op het basisstation.</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"An unexpected USB connection to the Base Station is preventing the wireless update.<br><br><font color=#aaaa00>Please unplug the USB cable that is plugged into the Base Station.</font>"
+"FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"Een onverwachte USB-verbinding met het basisstation voorkomt het draadloos bijwerken.<ul><li><font color=#aaaa00>Ontkoppel de stroomkabel van het basisstation.<li>Ontkoppel de USB-kabel die is aangesloten op het basisstation.<li>Sluit alleen de stroomkabel op het basisstation aan.<li>Wacht 30 seconden op het voltooien van de interne update van het basisstation.</font></ul><br>De LED van het basisstation kan mogelijk uit staan gedurende de interne update.<br>Wijzig geen enkele aansluiting op of verbinding met het basisstation gedurende de update."
+"[english]FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
 "Settings_Audio_Device_HMD"	"VR-headset"
 "[english]Settings_Audio_Device_HMD"	"VR Headset"
 "Settings_Audio_Device_Other"	"Overig"
@@ -2560,7 +2570,19 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
 "BS_PromotePowerManagement_Title"	"SteamVR"
 "[english]BS_PromotePowerManagement_Title"	"SteamVR"
+"BS_PromotePowerManagement_Explanation"	"SteamVR kan nu het energiebeheer van je basisstations beheren.<br><br>Basisstations die energiebeheer hebben ingeschakeld gaan in slaapstand als SteamVR niet wordt gebruikt en starten weer op als SteamVR start.<br>"
+"[english]BS_PromotePowerManagement_Explanation"	"SteamVR can power manage your Base Stations.<br><br>Power managed Base Stations go into standby mode when SteamVR is not in use and wake up again when SteamVR starts.<br>"
+"BS_PromotePowerManagement_Enable"	"Energiebeheer basisstation inschakelen *"
+"[english]BS_PromotePowerManagement_Enable"	"Enable Base Station Power Management *"
 "BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NIET AANBEVOLEN voor gedeelde ruimtes met meerdere SteamVR-gebruikers.</font>"
 "[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
+"BS_PromotePowerManagement_ExitNow"	"Nu afsluiten (%1)"
+"[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
+"FirmwareWizard_UpdateType_WatchmanV3PeripheralUpdate"	"Update voor randapparaat"
+"[english]FirmwareWizard_UpdateType_WatchmanV3PeripheralUpdate"	"Peripheral Device Update"
+"BS_PowerManagement_Identify"	"Klik om basisstation te identificeren."
+"[english]BS_PowerManagement_Identify"	"Click to identify Base Station."
+"BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 vereist een apparaatupdate om kanaalconfiguratie mogelijk te maken."
+"[english]BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 }
 }
