--- a/content/vrmonitor/translations/vrmonitor_english.txt
+++ b/content/vrmonitor/translations/vrmonitor_english.txt
@@ -167,6 +167,8 @@
 "MenuAction_RoomOverview" "View Room Overview"
 "MenuAction_Settings" "Settings"
 "MenuAction_LegacySettings" "Developer Settings"
+"MenuAction_BluetoothSettings" "Bluetooth Settings"
+"MenuAction_BaseStationSettings" "Base Station Settings"
 "MenuAction_DiagnosticsMenu" "Diagnostics"
 "MenuAction_MainPlaylistMenu" "Playlists"
 "MenuAction_PlaylistEditor" "Playlist Editor"
@@ -261,6 +263,9 @@
 "MonitorController_Version" "Version %1"
 "MonitorController_ResetCompleteSetup_Text" "This will completely reset your installation of SteamVR and restart the application."
 "Settings_Title" "SteamVR Settings"
+"Settings_Bluetooth_Title" "Bluetooth Settings"
+"Settings_BaseStations_Title" "Base Station Settings"
+"Settings_Developer_Title" "Developer Settings"
 "Settings_Checks" "Checks"
 "Settings_Notifications" "Notifications"
 "Settings_Applications" "Application"
