--- a/content/vrmonitor/translations/vrmonitor_errors_dutch.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_dutch.txt
@@ -113,7 +113,7 @@
 "[english]VRInitError_Init_InvalidInterface_Action"	"More info"
 "VRInitError_Init_UserConfigDirectoryInvalid_Header"	"SteamVR-fout"
 "[english]VRInitError_Init_UserConfigDirectoryInvalid_Header"	"SteamVR Error"
-"VRInitError_Init_UserConfigDirectoryInvalid_Description"	"De configuratiemap kan niet worden gevonden, dus er moet een nieuwe worden ingesteld."
+"VRInitError_Init_UserConfigDirectoryInvalid_Description"	"We hebben een fout ontdekt met betrekking tot je SteamVR-installatie. Bepaal de locatie van je SteamVR-configuratiemap."
 "[english]VRInitError_Init_UserConfigDirectoryInvalid_Description"	"We've discovered an error with your SteamVR installation. Please locate your SteamVR config directory."
 "VRInitError_Init_UserConfigDirectoryInvalid_Action"	"Configuratiemap instellen"
 "[english]VRInitError_Init_UserConfigDirectoryInvalid_Action"	"Set Config Directory"
@@ -137,13 +137,13 @@
 "[english]VRInitError_Init_PathRegistryNotFound_Action"	"Try again from the current directory"
 "VRInitError_Init_NoConfigPath_Header"	"SteamVR-fout"
 "[english]VRInitError_Init_NoConfigPath_Header"	"SteamVR Error"
-"VRInitError_Init_NoConfigPath_Description"	"Het configuratiepad kan niet worden gevonden, dus er moet een nieuwe worden ingesteld."
+"VRInitError_Init_NoConfigPath_Description"	"We hebben een fout ontdekt met betrekking tot je SteamVR-installatie. Bepaal de locatie van je SteamVR-configuratiemap."
 "[english]VRInitError_Init_NoConfigPath_Description"	"We've discovered an error with your SteamVR installation. Please locate your SteamVR config directory."
 "VRInitError_Init_NoConfigPath_Action"	"Configuratiemap instellen"
 "[english]VRInitError_Init_NoConfigPath_Action"	"Set Config Directory"
 "VRInitError_Init_NoLogPath_Header"	"SteamVR-fout"
 "[english]VRInitError_Init_NoLogPath_Header"	"SteamVR Error"
-"VRInitError_Init_NoLogPath_Description"	"Het logboekpad kan niet worden gevonden, dus er moet een nieuwe worden ingesteld."
+"VRInitError_Init_NoLogPath_Description"	"We hebben een fout ontdekt met betrekking tot je SteamVR-installatie. Bepaal de locatie van je SteamVR-logboekmap."
 "[english]VRInitError_Init_NoLogPath_Description"	"We've discovered an error with your SteamVR installation. Please locate your SteamVR log directory."
 "VRInitError_Init_NoLogPath_Action"	"Logboekmap instellen"
 "[english]VRInitError_Init_NoLogPath_Action"	"Set Log Directory"
@@ -221,7 +221,7 @@
 "[english]VRInitError_Driver_Unknown_Action"	"Fix it!"
 "VRInitError_Driver_HmdUnknown_Header"	"Headset niet herkend"
 "[english]VRInitError_Driver_HmdUnknown_Header"	"Headset not Recognized"
-"VRInitError_Driver_HmdUnknown_Description"	"De headset is niet herkend. Kijk na of je een geldige headset gebruikt."
+"VRInitError_Driver_HmdUnknown_Description"	"SteamVR heeft momenteel moeite om deze headset te identificeren."
 "[english]VRInitError_Driver_HmdUnknown_Description"	"SteamVR is having difficulty identifying this headset."
 "VRInitError_Driver_HmdUnknown_Action"	"Los het op!"
 "[english]VRInitError_Driver_HmdUnknown_Action"	"Fix it!"
