--- a/content/vrmonitor/translations/vrmonitor_errors_italian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_italian.txt
@@ -495,7 +495,7 @@
 "[english]Popover_NotReady_HMD_Header"	"Headset not ready"
 "Popover_NotReady_Controller_Header"	"Controller non pronto"
 "[english]Popover_NotReady_Controller_Header"	"Controller not ready"
-"Popover_NotReady_Controller_Description"	"Assicurati che sia acceso e vicino a te."
+"Popover_NotReady_Controller_Description"	"Assicurati che sia acceso e collocato nelle vicinanze."
 "[english]Popover_NotReady_Controller_Description"	"Make sure it is turned on and nearby."
 "Popover_NotReady_Base_Header"	"Stazione di base non pronta"
 "[english]Popover_NotReady_Base_Header"	"Base station not ready"
@@ -557,7 +557,7 @@
 "[english]Popover_FirmwareUpdateNeededWarning_Action_AutomaticUpdate"	"Update device"
 "Popover_ConnectionRefusedBySteam_Header"	"Errore di Steam"
 "[english]Popover_ConnectionRefusedBySteam_Header"	"Steam Error"
-"Popover_ConnectionRefusedBySteam_Description"	"SteamVR ha riscontrato un problema di connessione a Steam. Riavvia Steam e riprova."
+"Popover_ConnectionRefusedBySteam_Description"	"SteamVR ha riscontrato un problema nella connessione a Steam. Riavvia Steam e riprova."
 "[english]Popover_ConnectionRefusedBySteam_Description"	"SteamVR has encountered an error connecting to Steam. Please restart Steam and try again."
 "Popover_DirectModeDriverUpdate_Header"	"Aggiorna i driver video"
 "[english]Popover_DirectModeDriverUpdate_Header"	"Update Graphics Drivers"
@@ -569,7 +569,7 @@
 "[english]VRInitError_Init_InterfaceNotFound_ActionURL"	""
 "Warning_DismissableWarning_RunTutorialAgain_Header"	"Configurazione Stanza e tutorial"
 "[english]Warning_DismissableWarning_RunTutorialAgain_Header"	"Room Setup and Tutorial"
-"Warning_DismissableWarning_RunTutorialAgain_Description"	"Puoi avviare la configurazione della stanza o il tutorial in qualsiasi momento dal menu di SteamVR qui sotto."
+"Warning_DismissableWarning_RunTutorialAgain_Description"	"Puoi avviare la Configurazione Stanza o il tutorial in qualsiasi momento dal menu di SteamVR qui sotto."
 "[english]Warning_DismissableWarning_RunTutorialAgain_Description"	"You can use Room Setup or the Tutorial again anytime from the SteamVR menu below."
 "Warning_DismissableWarning_RunTutorialAgain_Action"	"Ulteriori informazioni"
 "[english]Warning_DismissableWarning_RunTutorialAgain_Action"	"More info"
@@ -1175,7 +1175,7 @@
 "[english]Warning_DismissableWarning_BasestationSingleBaseModeHint_Action"	"More info"
 "Warning_DismissableWarning_BasestationSingleBaseModeHint_ActionURL"	"https://support.steampowered.com/steamvr/HTC_Vive/"
 "[english]Warning_DismissableWarning_BasestationSingleBaseModeHint_ActionURL"	"https://support.steampowered.com/steamvr/HTC_Vive/"
-"Warning_DismissableWarning_WarningsForTheFirstTime_Description"	"Seleziona le icone di seguito per visualizzare i dettagli e lo stato di ogni dispositivo. Se il dispositivo richiede un aggiornamento, verrà visualizzata (i) sopra l'icona."
+"Warning_DismissableWarning_WarningsForTheFirstTime_Description"	"Passa il cursore sopra le icone di seguito per visualizzare i dettagli e lo stato di ogni dispositivo. Se il dispositivo richiede un aggiornamento, verrà visualizzata una (i) sopra l'icona."
 "[english]Warning_DismissableWarning_WarningsForTheFirstTime_Description"	"Hover over the icons below to see details and status about each device. If your device requires an update, you will see an (i) over the icon."
 "Warning_DismissableWarning_WarningsForTheFirstTime_Action"	"Ulteriori informazioni"
 "[english]Warning_DismissableWarning_WarningsForTheFirstTime_Action"	"More info"
