--- a/content/vrmonitor/translations/vrmonitor_errors_swedish.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_swedish.txt
@@ -15,7 +15,7 @@
 "[english]Error_HMDDoesNotTrack_Description"	"Make sure your headset is in view of base station. "
 "Error_HMDDoesNotTrack_Action"	"Mer information"
 "[english]Error_HMDDoesNotTrack_Action"	"More info"
-"Error_NoCompositorAvailable_Header"	"Compositor är otillgänglig"
+"Error_NoCompositorAvailable_Header"	"SteamVR-fel"
 "[english]Error_NoCompositorAvailable_Header"	"SteamVR Fail"
 "Error_NoCompositorAvailable_Description"	"Den måste köras för att SteamVR ska fungera korrekt."
 "[english]Error_NoCompositorAvailable_Description"	"Oh no! SteamVR has encountered an unexpected problem."
@@ -33,19 +33,19 @@
 "[english]Error_CompositorNotFullscreen_Description"	"Make sure your headset's display is in fullscreen mode."
 "Error_CompositorNotFullscreen_Action"	"Gör Compositor fullskärm"
 "[english]Error_CompositorNotFullscreen_Action"	"Enable fullscreen mode"
-"Error_CompositorNotRunning_Header"	"Compositor körs ej"
+"Error_CompositorNotRunning_Header"	"SteamVR-fel"
 "[english]Error_CompositorNotRunning_Header"	"SteamVR Fail"
 "Error_CompositorNotRunning_Description"	"Det behövs för att SteamVR ska fungera korrekt."
 "[english]Error_CompositorNotRunning_Description"	"Oh no! SteamVR has encountered an unexpected problem."
 "Error_CompositorNotRunning_Action"	"Starta om SteamVR"
 "[english]Error_CompositorNotRunning_Action"	"Restart SteamVR"
-"Error_CompositorTooManyRunning_Header"	"För många compositors körs"
+"Error_CompositorTooManyRunning_Header"	"SteamVR-fel"
 "[english]Error_CompositorTooManyRunning_Header"	"SteamVR Fail"
 "Error_CompositorTooManyRunning_Description"	"Endast en compositor kan köras för att SteamVR ska fungera korrekt."
 "[english]Error_CompositorTooManyRunning_Description"	"Oh no! SteamVR has encountered an unexpected problem."
 "Error_CompositorTooManyRunning_Action"	"Starta om SteamVR"
 "[english]Error_CompositorTooManyRunning_Action"	"Restart SteamVR"
-"Error_VRServerNotRunning_Header"	"VR Server körs ej"
+"Error_VRServerNotRunning_Header"	"SteamVR-fel"
 "[english]Error_VRServerNotRunning_Header"	"SteamVR Fail"
 "Error_VRServerNotRunning_Description"	"Det behövs för att SteamVR ska fungera korrekt."
 "[english]Error_VRServerNotRunning_Description"	"Oh no! SteamVR has encountered an unexpected problem."
@@ -63,37 +63,37 @@
 "[english]Error_TrackingDevice_NoPose_Description"	"This device is not tracking. Make sure it is in view of a base station."
 "Error_TrackingDevice_NoPose_Action"	"Mer information"
 "[english]Error_TrackingDevice_NoPose_Action"	"More info"
-"VRInitError_Unknown_Header"	"Hmm, det där borde inte ha hänt."
+"VRInitError_Unknown_Header"	"SteamVR-fel"
 "[english]VRInitError_Unknown_Header"	"SteamVR Fail"
 "VRInitError_Unknown_Description"	"Ett oväntat fel uppstod. Vänligen se SteamVR Support för hjälp."
 "[english]VRInitError_Unknown_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Unknown_Action"	"Se SteamVR Support"
 "[english]VRInitError_Unknown_Action"	"More info"
-"VRInitError_Init_InstallationNotFound_Header"	"Filer saknas"
+"VRInitError_Init_InstallationNotFound_Header"	"SteamVR-fel"
 "[english]VRInitError_Init_InstallationNotFound_Header"	"SteamVR Fail"
 "VRInitError_Init_InstallationNotFound_Description"	"Några filer är inte där vi trodde de skulle vara."
 "[english]VRInitError_Init_InstallationNotFound_Description"	"We've discovered some essential files appear to be missing."
 "VRInitError_Init_InstallationNotFound_Action"	"Försök igen från nuvarande mapp"
 "[english]VRInitError_Init_InstallationNotFound_Action"	"More info"
-"VRInitError_Init_InstallationCorrupt_Header"	"Filer saknas"
+"VRInitError_Init_InstallationCorrupt_Header"	"SteamVR-fel"
 "[english]VRInitError_Init_InstallationCorrupt_Header"	"SteamVR Fail"
 "VRInitError_Init_InstallationCorrupt_Description"	"Några filer som behövs för SteamVR saknas, vänligen kontrollera din SteamVR-installation."
 "[english]VRInitError_Init_InstallationCorrupt_Description"	"We've discovered some essential files appear to be missing. Please reinstall SteamVR."
 "VRInitError_Init_InstallationCorrupt_Action"	"Felsökning"
 "[english]VRInitError_Init_InstallationCorrupt_Action"	"More info"
-"VRInitError_Init_VRClientDLLNotFound_Header"	"Fil saknas"
+"VRInitError_Init_VRClientDLLNotFound_Header"	"SteamVR-fel"
 "[english]VRInitError_Init_VRClientDLLNotFound_Header"	"SteamVR Fail"
 "VRInitError_Init_VRClientDLLNotFound_Description"	"En fil som SteamVR kräver kunde ej hittas, vänligen kontrollera din SteamVR-installation."
 "[english]VRInitError_Init_VRClientDLLNotFound_Description"	"We've discovered some essential files appear to be missing. Please reinstall SteamVR."
 "VRInitError_Init_VRClientDLLNotFound_Action"	"Felsökning"
 "[english]VRInitError_Init_VRClientDLLNotFound_Action"	"More info"
-"VRInitError_Init_FileNotFound_Header"	"Fil saknas"
+"VRInitError_Init_FileNotFound_Header"	"SteamVR-fel"
 "[english]VRInitError_Init_FileNotFound_Header"	"SteamVR Fail"
 "VRInitError_Init_FileNotFound_Description"	"En fil som SteamVR kräver kunde ej hittas, vänligen kontrollera din SteamVR-installation."
 "[english]VRInitError_Init_FileNotFound_Description"	"We've discovered some essential files appear to be missing. Please reinstall SteamVR."
 "VRInitError_Init_FileNotFound_Action"	"Felsökning"
 "[english]VRInitError_Init_FileNotFound_Action"	"More info"
-"VRInitError_Init_FactoryNotFound_Header"	"Fil saknad"
+"VRInitError_Init_FactoryNotFound_Header"	"SteamVR-fel"
 "[english]VRInitError_Init_FactoryNotFound_Header"	"SteamVR Fail"
 "VRInitError_Init_FactoryNotFound_Description"	"En fil som SteamVR kräver kunde ej hittas, vänligen kontrollera din SteamVR-installation."
 "[english]VRInitError_Init_FactoryNotFound_Description"	"We've discovered some essential files appear to be missing. Please reinstall SteamVR."
@@ -106,7 +106,7 @@
 "VRInitError_Init_InterfaceNotFound_Action"	"
 "
 "[english]VRInitError_Init_InterfaceNotFound_Action"	""
-"VRInitError_Init_InvalidInterface_Header"	"Hmm, det där borde inte ha hänt."
+"VRInitError_Init_InvalidInterface_Header"	"SteamVR-fel"
 "[english]VRInitError_Init_InvalidInterface_Header"	"SteamVR Fail"
 "VRInitError_Init_InvalidInterface_Description"	"Ett oväntat fel uppstod. Vänligen se SteamVR Support för hjälp."
 "[english]VRInitError_Init_InvalidInterface_Description"	"We've encountered an unexpected problem. Please visit SteamVR Support for more info."
@@ -124,13 +124,13 @@
 "[english]VRInitError_Init_HmdNotFound_Description"	"Make sure your headset is connected properly, then reset it below."
 "VRInitError_Init_HmdNotFound_Action"	"Felsökning"
 "[english]VRInitError_Init_HmdNotFound_Action"	"More info"
-"VRInitError_Init_NotInitialized_Header"	"Hmm, det där borde inte ha hänt."
+"VRInitError_Init_NotInitialized_Header"	"SteamVR-fel"
 "[english]VRInitError_Init_NotInitialized_Header"	"SteamVR Fail"
 "VRInitError_Init_NotInitialized_Description"	"Ett oväntat fel uppstod. Vänligen se SteamVR Support för hjälp."
 "[english]VRInitError_Init_NotInitialized_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Init_NotInitialized_Action"	"Se SteamVR Support"
 "[english]VRInitError_Init_NotInitialized_Action"	"More info"
-"VRInitError_Init_PathRegistryNotFound_Header"	"Filer saknas"
+"VRInitError_Init_PathRegistryNotFound_Header"	"SteamVR-fel"
 "[english]VRInitError_Init_PathRegistryNotFound_Header"	"SteamVR Fail"
 "VRInitError_Init_PathRegistryNotFound_Description"	"Några filer är inte där vi trodde de skulle vara."
 "[english]VRInitError_Init_PathRegistryNotFound_Description"	"We've discovered some essential files appear to be missing. Please try again."
@@ -154,25 +154,25 @@
 "[english]VRInitError_Init_PathRegistryNotWritable_Description"	"SteamVR is unable to save information. Please review your user permissions on this computer."
 "VRInitError_Init_PathRegistryNotWritable_Action"	"Felsökning"
 "[english]VRInitError_Init_PathRegistryNotWritable_Action"	"More info"
-"VRInitError_Init_AppInfoInitFailed_Header"	"Något är fel"
+"VRInitError_Init_AppInfoInitFailed_Header"	"SteamVR-fel"
 "[english]VRInitError_Init_AppInfoInitFailed_Header"	"SteamVR Fail"
 "VRInitError_Init_AppInfoInitFailed_Description"	"En intern komponent av SteamVR fungerar inte som den ska. Vänligen se SteamVR Support för hjälp."
 "[english]VRInitError_Init_AppInfoInitFailed_Description"	"A critical component of SteamVR isn't working properly. Please visit SteamVR Support for more info."
 "VRInitError_Init_AppInfoInitFailed_Action"	"Se SteamVR Support"
 "[english]VRInitError_Init_AppInfoInitFailed_Action"	"More info"
-"VRInitError_Init_Retry_Header"	"Hmm, det där borde inte ha hänt."
+"VRInitError_Init_Retry_Header"	"SteamVR-fel"
 "[english]VRInitError_Init_Retry_Header"	"SteamVR Fail"
 "VRInitError_Init_Retry_Description"	"Ett oväntat fel uppstod. Vänligen se SteamVR Support för hjälp."
 "[english]VRInitError_Init_Retry_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Init_Retry_Action"	"Se SteamVR Support"
 "[english]VRInitError_Init_Retry_Action"	"More info"
-"VRInitError_Init_InitCanceledByUser_Header"	"Hmm, det där borde inte ha hänt."
+"VRInitError_Init_InitCanceledByUser_Header"	"SteamVR-fel"
 "[english]VRInitError_Init_InitCanceledByUser_Header"	"SteamVR Fail"
 "VRInitError_Init_InitCanceledByUser_Description"	"Ett oväntat fel uppstod. Vänligen se SteamVR Support för hjälp."
 "[english]VRInitError_Init_InitCanceledByUser_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
 "VRInitError_Init_InitCanceledByUser_Action"	"Se SteamVR Support"
 "[english]VRInitError_Init_InitCanceledByUser_Action"	"More info"
-"VRInitError_Init_AnotherAppLaunching_Header"	"Hmm, det där borde inte ha hänt."
+"VRInitError_Init_AnotherAppLaunching_Header"	"SteamVR-fel"
 "[english]VRInitError_Init_AnotherAppLaunching_Header"	"SteamVR Fail"
 "VRInitError_Init_AnotherAppLaunching_Description"	"Ett oväntat fel uppstod. Vänligen se SteamVR Support för hjälp."
 "[english]VRInitError_Init_AnotherAppLaunching_Description"	"SteamVR has encountered an unexpected problem. Please visit SteamVR Support for more info."
@@ -258,7 +258,7 @@
 "[english]VRInitError_Driver_CalibrationInvalid_Action"	"More info"
 "VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset-skärm frånkopplad"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Header"	"Headset Display Disconnected"
-"VRInitError_Driver_HmdDisplayNotFound_Description"	"Headsetets skärm kunde ej hittas, se till att dina videokablar är fullständigt inkopplade och starta sedan om det genom att klicka nedan."
+"VRInitError_Driver_HmdDisplayNotFound_Description"	"Se till att dina videokablar är inkopplade ordentligt. Headsetets skärm kunde inte hittas."
 "[english]VRInitError_Driver_HmdDisplayNotFound_Description"	"Please make sure your video cables are securely connected. The headset's display was not found."
 "VRInitError_Driver_HmdDisplayNotFound_Action"	"Felsökning"
 "[english]VRInitError_Driver_HmdDisplayNotFound_Action"	"More info"
@@ -734,7 +734,7 @@ Du behöver kontakta HTC."
 "[english]VRInitError_Init_HmdDriverIdIsNone_Header"	"Headset not detected"
 "VRInitError_Init_HmdDriverIdIsNone_Description"	"Se till att ditt headset är korrekt inkopplat, starta sedan om det genom att klicka nedan."
 "[english]VRInitError_Init_HmdDriverIdIsNone_Description"	"Make sure your headset is connected properly, then reset it below."
-"VRInitError_Init_HmdDriverIdIsNone_FirstAction"	"Starta om headsetet"
+"VRInitError_Init_HmdDriverIdIsNone_FirstAction"	"Återställ headset"
 "[english]VRInitError_Init_HmdDriverIdIsNone_FirstAction"	"Reset Headset"
 "VRInitError_Init_HmdDriverIdIsNone_Action"	"Felsökning"
 "[english]VRInitError_Init_HmdDriverIdIsNone_Action"	"More info"
@@ -872,7 +872,7 @@ Du behöver kontakta HTC."
 "[english]Warning_DismissableWarning_NewDriverInstalled_Description"	"Please Restart SteamVR to use your updated device."
 "Warning_DismissableWarning_NewDriverInstalled_Action"	"Starta om SteamVR"
 "[english]Warning_DismissableWarning_NewDriverInstalled_Action"	"Restart SteamVR"
-"VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Windows 10 med senaste uppdateringarna krävs"
+"VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Windows 10-uppdatering"
 "[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Header"	"Windows 10 Update"
 "VRInitError_VendorSpecific_WindowsNotInDevMode_Description"	"Du måste installera den senaste Windows-uppdateringen för att använda SteamVR med Windows Mixed Reality."
 "[english]VRInitError_VendorSpecific_WindowsNotInDevMode_Description"	"To use SteamVR with Windows Mixed Reality, you need to install the latest Windows update."
