--- a/content/vrmonitor/translations/vrmonitor_japanese.txt
+++ b/content/vrmonitor/translations/vrmonitor_japanese.txt
@@ -1563,7 +1563,7 @@
 "[english]Settings_CheckForMissedFramesWarning"	"Show missed frame warning"
 "Settings_ShowPlaylistMenu"	"プレイリストメニューを表示"
 "[english]Settings_ShowPlaylistMenu"	"Show playlist menu"
-"Settings_StartSteamVROnAppLaunch"	"アプリケーション立ち上げ時に SteamVR を起動"
+"Settings_StartSteamVROnAppLaunch"	"VRアプリケーション立ち上げ時にSteamVRを起動"
 "[english]Settings_StartSteamVROnAppLaunch"	"Start SteamVR when a VR application starts"
 "Settings_Developer_General_Header"	"開発者"
 "[english]Settings_Developer_General_Header"	"Developer"
@@ -1835,11 +1835,11 @@
 "[english]Settings_StatusWindowMinimizeToTray_Text"	"Minimize to the system tray"
 "ShutdownWhileAppRunning_Title"	"SteamVR のシャットダウン"
 "[english]ShutdownWhileAppRunning_Title"	"SteamVR Shutdown"
-"ShutdownWhileAppRunning_Format"	"SteamVR をシャットダウンすると '%1' もシャットダウンされます。続行しますか？"
+"ShutdownWhileAppRunning_Format"	"これにより「%1」も終了します。今すぐ終了しますか？"
 "[english]ShutdownWhileAppRunning_Format"	"This will also quit '%1'. Do you wish to quit now?"
 "RebootWhileAppRunning_Title"	"SteamVRを再起動しますか？"
 "[english]RebootWhileAppRunning_Title"	"Restart SteamVR?"
-"RebootWhileAppRunning_Format"	"SteamVR をリブートすると '%1' がシャットダウンされます。リブートしますか？"
+"RebootWhileAppRunning_Format"	"これにより「%1」も終了します。今すぐ再起動しますか？"
 "[english]RebootWhileAppRunning_Format"	"This will also quit '%1'. Do you wish to restart now?"
 "TrackedDeviceClass_GenericTracker"	"トラッカー"
 "[english]TrackedDeviceClass_GenericTracker"	"Tracker"
@@ -1859,13 +1859,13 @@
 "[english]FirmwareWizard_UpdateGenericTracker_Progress_Title"	"Update Tracker"
 "FirmwareWizard_UpdateGenericTracker_Progress_MiddleText"	"トラッカーを更新しています。これには数分かかります..."
 "[english]FirmwareWizard_UpdateGenericTracker_Progress_MiddleText"	"Updating tracker. This could take several minutes..."
-"FirmwareWizard_UpdateGenericTracker_Progress_LowerText"	"警告: ファームウェアの更新中はトラッカーを外したり、他のデバイスを接続したり、他のシステムを変更したりしないでください。このトラッカーが使用できなくなるおそれがあります。"
+"FirmwareWizard_UpdateGenericTracker_Progress_LowerText"	"警告: このデバイスの更新中はトラッカーを外したり、他のデバイスを接続したり、その他のシステム変更を加えたりしないでください。このトラッカーを使用できなくなるおそれがあります。"
 "[english]FirmwareWizard_UpdateGenericTracker_Progress_LowerText"	"WARNING: Do not unplug the tracker, plug in any additional devices, or make any other system changes while this device is being updated. Doing so can render this tracker unusable."
 "FirmwareWizard_UpdateGenericTracker_Fail_Title"	"デバイスの更新に失敗しました"
 "[english]FirmwareWizard_UpdateGenericTracker_Fail_Title"	"Device Update Failed"
 "FirmwareWizard_UpdateGenericTracker_Fail_UpperText"	"トラッカーの更新に失敗しました。"
 "[english]FirmwareWizard_UpdateGenericTracker_Fail_UpperText"	"Tracker update failed."
-"FirmwareWizard_UpdateGenericTracker_Fail_MiddleText"	"トラッカーとコンピュータが Micro-USB でしっかり接続されていることをご確認ください。問題が解決しない場合は、SteamVR を終了して下さい。トラッカーの電源が切れていない場合は、システムボタンを押し続けて電源を切ってください。その後、Steam VR を立ち上げてもう一度お試しください。"
+"FirmwareWizard_UpdateGenericTracker_Fail_MiddleText"	"トラッカーとコンピューターがMicro-USBでしっかり接続されていることをご確認ください。問題が解決しない場合は、SteamVRを終了してください。トラッカーの電源が切れていない場合は、システムボタンを押し続けて電源を切ってください。その後、Steam VRを立ち上げてもう一度お試しください。"
 "[english]FirmwareWizard_UpdateGenericTracker_Fail_MiddleText"	"Make sure your tracker is securely connected to your computer by micro-USB. If this continues to fail, quit SteamVR. If your tracker didn't turn off, turn it off by pressing and holding the system button. Then launch SteamVR and try again."
 "FirmwareWizard_UpdateGenericTracker_Fail_LowerText"	"[再試行] をクリックしてもう一度お試しください。"
 "[english]FirmwareWizard_UpdateGenericTracker_Fail_LowerText"	"Click 'Retry' below to try again."
@@ -1891,7 +1891,7 @@
 "[english]MenuAction_Workshop_ViewWiki"	"SteamVR Environments Wiki"
 "Settings_EnableLinuxGPUProfiling"	"GPU プロファイリング有効化"
 "[english]Settings_EnableLinuxGPUProfiling"	"Enable GPU profiling"
-"Settings_Advanced_AllowSupersampleFiltering"	"高度なスーパーサンプルフィルタを有効化する"
+"Settings_Advanced_AllowSupersampleFiltering"	"高度なスーパーサンプルフィルターを有効化する"
 "[english]Settings_Advanced_AllowSupersampleFiltering"	"Enable advanced supersample filtering"
 "Explanation_SupersamplingFiltering"	"スーパーサンプリングのフィルタオプション"
 "[english]Explanation_SupersamplingFiltering"	"Supersampling Filtering Options"
@@ -1949,11 +1949,11 @@
 "[english]BugReporter_ProgressSubmittingPercent"	"Submitting...%1%"
 "Settings_HomeAppCheck"	"SteamVRホームを使用"
 "[english]Settings_HomeAppCheck"	"Use SteamVR Home"
-"Settings_HomeAppDesc"	"新しい SteamVR ホーム体験は、より豊かなホーム空間、ユーザー同士での交流機能などをサポートします。この機能は現在ベータに含まれており、掲示板でのフィードバックをお待ちしています。"
+"Settings_HomeAppDesc"	"バーチャル体験や他のユーザーとの交流をお楽しみください。"
 "[english]Settings_HomeAppDesc"	"Enjoy virtual environments, social features, and more."
 "Settings_NightModeCheck"	"ナイトモード"
 "[english]Settings_NightModeCheck"	"Night Mode"
-"Settings_NightModeDesc"	"ナイトモードはヘッドセットを午前 5:00 まで (または SteamVR が再起動されるまで) 減光します。"
+"Settings_NightModeDesc"	"ヘッドセットを午前5時（またはSteamVRが再起動される）まで減光します。"
 "[english]Settings_NightModeDesc"	"Dim the headset until 5:00 AM (or until SteamVR is restarted)."
 "Settings_PauseOnStandby"	"ヘッドセットがアイドル状態の時にレンダリングを一時停止する"
 "[english]Settings_PauseOnStandby"	"Pause rendering when headset is idle"
@@ -2035,7 +2035,7 @@
 "[english]BluetoothControllerStatus_Disconnecting"	"Disconnecting..."
 "BluetoothControllerStatus_FailedConnection"	"ブルートゥース接続に失敗しました。リンクボックスが正しく接続されていることを確認してから、電源プラグを入れ直してリンクボックスをリセットし、SteamVR を再起動してください。"
 "[english]BluetoothControllerStatus_FailedConnection"	"Bluetooth connection failed. Check link box connections, then unplug and replug power to the link box to reset it, then restart SteamVR."
-"BluetoothControllerStatus_Connected"	"ブルートゥースが接続されました。"
+"BluetoothControllerStatus_Connected"	"ブルートゥース接続中"
 "[english]BluetoothControllerStatus_Connected"	"Bluetooth connected"
 "ScanForBaseStations_Scanning"	"ベースステーションをスキャン中...\n\n残り %1 秒です。"
 "[english]ScanForBaseStations_Scanning"	"Scanning For Base Stations...\n\n%1 Seconds Remaining."
@@ -2069,7 +2069,7 @@
 "[english]Settings_GpuInfo_GpuName"	"GPU Name"
 "Settings_GpuInfo_GpuDriver"	"GPUドライバ"
 "[english]Settings_GpuInfo_GpuDriver"	"GPU Driver"
-"Settings_GpuInfo_GpuSpeed"	"GPU 計測スピード:"
+"Settings_GpuInfo_GpuSpeed"	"GPU計測スピード"
 "[english]Settings_GpuInfo_GpuSpeed"	"GPU Measured Speed"
 "Settings_GpuInfo_Current"	"現在の片目あたりのレンダリング設定"
 "[english]Settings_GpuInfo_Current"	"The current setting renders each eye at"
@@ -2093,7 +2093,7 @@
 "[english]Settings_GpuInfo_NoHeadset"	"No Headset Detected"
 "QuickCalibrate_GiganticSpace"	"巨大な空きスペース"
 "[english]QuickCalibrate_GiganticSpace"	"Gigantic Space"
-"Advanced_PerfGraphInHMD"	"ヘッドセットにGPUパフォーマンスグラフを表示 (ベータ)"
+"Advanced_PerfGraphInHMD"	"ヘッドセットにGPUパフォーマンスグラフを表示"
 "[english]Advanced_PerfGraphInHMD"	"Display GPU performance graph in headset"
 "Advanced_ReprojectionOn"	"再投影 オン"
 "[english]Advanced_ReprojectionOn"	"Reprojection On"
@@ -2261,7 +2261,7 @@
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"この追跡セッションに表示中です。"
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session."
-"Monitor_RestartRequestedDialog_Title"	"再起動が必要"
+"Monitor_RestartRequestedDialog_Title"	"%1 ドライバーを再起動してください"
 "[english]Monitor_RestartRequestedDialog_Title"	"Restart for %1 driver"
 "Monitor_RestartRequestedDialog_MessageNoReason"	"ドライバ %1 は SteamVR の再起動が必要です。"
 "[english]Monitor_RestartRequestedDialog_MessageNoReason"	"Driver %1 needs to restart SteamVR."
@@ -2505,5 +2505,11 @@
 "[english]HeadsetView_EyeMode_BothLeftDominant"	"Both Eyes - Left Dominant"
 "HeadsetView_EyeMode_BothRightDominant"	"両目 - 右優位"
 "[english]HeadsetView_EyeMode_BothRightDominant"	"Both Eyes - Right Dominant"
+"Settings_Audio_Device_HMD"	"VRヘッドセット"
+"[english]Settings_Audio_Device_HMD"	"VR Headset"
+"Settings_Audio_Device_Other"	"その他"
+"[english]Settings_Audio_Device_Other"	"Other"
+"Settings_Audio_Default"	"デフォルト"
+"[english]Settings_Audio_Default"	"Default"
 }
 }
