--- a/content/vrmonitor/translations/vrmonitor_swedish.txt
+++ b/content/vrmonitor/translations/vrmonitor_swedish.txt
@@ -251,7 +251,7 @@
 "[english]MonitorController_Version"	"Version %1"
 "MonitorController_ResetCompleteSetup_Text"	"Detta kommer återställa ditt Complete-system, men alla borttagna filer kommer säkerhetskopieras.\n\n- Alla inställningar i SteamVR kommer tas bort.\n- Runtime-inställningarna kommer tas bort.\n- Rumkonfigurationsdata kommer tas bort.\n\nProgrammet startas om efter återställningen!\n"
 "[english]MonitorController_ResetCompleteSetup_Text"	"This will completely reset your installation of SteamVR and restart the application."
-"Settings_Title"	"Inställningar"
+"Settings_Title"	"SteamVR-inställningar"
 "[english]Settings_Title"	"SteamVR Settings"
 "Settings_Checks"	"Kontroller"
 "[english]Settings_Checks"	"Checks"
@@ -1194,7 +1194,7 @@
 "[english]FirmwareWizard_VRCUpdate"	"Device Update"
 "FirmwareWizard_DisplayFPGAUpdate"	"Visa FPGA-uppdatering"
 "[english]FirmwareWizard_DisplayFPGAUpdate"	"Display Update"
-"FirmwareWizard_ExitBootloaderMode"	"Avsluta starthanteraren"
+"FirmwareWizard_ExitBootloaderMode"	"Uppdateringen slutförs ..."
 "[english]FirmwareWizard_ExitBootloaderMode"	"Finishing update..."
 "Settings_Camera_SelectCameraChaperoneStrengthHeader"	"Styrka på kamera-chaperone:"
 "[english]Settings_Camera_SelectCameraChaperoneStrengthHeader"	"Camera Chaperone Strength"
@@ -2029,6 +2029,8 @@
 "[english]BluetoothControllerStatus_Connecting"	"Connecting..."
 "BluetoothControllerStatus_Disconnecting"	"Kopplar ifrån..."
 "[english]BluetoothControllerStatus_Disconnecting"	"Disconnecting..."
+"BluetoothControllerStatus_Connected"	"Bluetooth är ansluten"
+"[english]BluetoothControllerStatus_Connected"	"Bluetooth connected"
 "ScanForBaseStation_FoundStations"	"Skanningen slutförd"
 "[english]ScanForBaseStation_FoundStations"	"Scan Complete"
 "ScanForBaseStations_Refresh"	"Skanna igen"
@@ -2085,7 +2087,7 @@
 "[english]Advanced_ReprojectionOff"	"Reprojection Off"
 "Settings_StatusWindowHidePopups_Text"	"Tysta varningar när SteamVR-status är minimerad"
 "[english]Settings_StatusWindowHidePopups_Text"	"Suppress VR warnings and alerts when minimized"
-"MenuAction_ShowControllerBinding"	"Konfigurera handkontroll"
+"MenuAction_ShowControllerBinding"	"Kontrollinställningar"
 "[english]MenuAction_ShowControllerBinding"	"Controller Settings"
 "MenuAction_ShowManageTrackers"	"Hantera Vive Trackers"
 "[english]MenuAction_ShowManageTrackers"	"Manage Vive Trackers"
