--- a/content/vrmonitor/translations/vrmonitor_thai.txt
+++ b/content/vrmonitor/translations/vrmonitor_thai.txt
@@ -1115,7 +1115,7 @@
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"เมื่อกำลังใช้ SteamVR..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
-"Settings_Audio_AudioPlay"	"กำหนดอุปกรณ์ระบบเสียงเป็น"
+"Settings_Audio_AudioPlay"	"อุปกรณ์ส่งข้อมูลเสียง"
 "[english]Settings_Audio_AudioPlay"	"Audio output device"
 "Settings_Audio_AudioRecord"	"อุปกรณ์รับข้อมูลเสียง"
 "[english]Settings_Audio_AudioRecord"	"Audio input device"
@@ -2583,9 +2583,19 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
 "BS_PromotePowerManagement_Title"	"SteamVR"
 "[english]BS_PromotePowerManagement_Title"	"SteamVR"
+"BS_PromotePowerManagement_Explanation"	"SteamVR สามารถจัดการพลังงานสถานีฐานของคุณได้<br><br>สถานีฐานที่ใช้การจัดการพลังงานจะเข้าสู่โหมดรอใช้งาน หลังจาก SteamVR ไม่ได้ถูกใช้งานอยู่ และจะถูกปลุกเมื่อ SteamVR เริ่มเปิด<br>"
+"[english]BS_PromotePowerManagement_Explanation"	"SteamVR can power manage your Base Stations.<br><br>Power managed Base Stations go into standby mode when SteamVR is not in use and wake up again when SteamVR starts.<br>"
+"BS_PromotePowerManagement_Enable"	"เปิดการใช้งานการจัดการพลังงานของสถานีฐาน *"
+"[english]BS_PromotePowerManagement_Enable"	"Enable Base Station Power Management *"
 "BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* ไม่แนะนำสำหรับพื้นที่การติดตามตำแหน่งแบบแบ่งปันกันระหว่างผู้ใช้ SteamVR หลายคน</font>"
 "[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
 "BS_PromotePowerManagement_ExitNow"	"ออกจากระบบเดี๋ยวนี้ (%1)"
 "[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
+"FirmwareWizard_UpdateType_WatchmanV3PeripheralUpdate"	"อัปเดตอุปกรณ์ต่อพ่วง"
+"[english]FirmwareWizard_UpdateType_WatchmanV3PeripheralUpdate"	"Peripheral Device Update"
+"BS_PowerManagement_Identify"	"คลิกเพื่อระบุสถานีฐาน"
+"[english]BS_PowerManagement_Identify"	"Click to identify Base Station."
+"BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 จำเป็นต้องอัปเดตอุปกรณ์เพื่อเปิดการใช้งานการระบุตัวตนอุปกรณ์"
+"[english]BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 }
 }
