--- a/resources/webinterface/dashboard/localization/bindingui_english.json
+++ b/resources/webinterface/dashboard/localization/bindingui_english.json
@@ -318,10 +318,14 @@
 
   "DisplaySettings_Title": "Display Settings",
   "DisplaySettings_DisplayBrightness": "Display Brightness",
+  "DisplaySettings_IndexColumnCorrection": "Index Display Column Correction",
   "DisplaySettings_ColumnCorrection": "Column Correction",
   "DisplaySettings_ColumnCorrectionDesc": "Column Correction mitigates vertical \"screendoor\" during head motion. Most users should leave it enabled, with fine adjustment of 0.",
+  "DisplaySettings_ColumnCorrectionEdit" : "Edit",
   "DisplaySettings_Error_FirmwareUpdateNeeded": "A firmware update is required to enable Display Settings customizations.",
   "DisplaySettings_EnableColumnCorrection": "Column Correction",
+  "DisplaySettings_ColumnCorrectionOff": "Off",
+  "DisplaySettings_ColumnCorrectionAuto": "Auto",
   "DisplaySettings_AdvancedSettings": "Advanced Settings",
   "DisplaySettings_ShowAdvancedSettings": "Show Advanced Settings",
   "DisplaySettings_HideAdvancedSettings": "Hide Advanced Settings",
