--- a/resources/webinterface/dashboard/localization/vrmonitor_english.json
+++ b/resources/webinterface/dashboard/localization/vrmonitor_english.json
@@ -6,6 +6,20 @@
 	"VRMonitor_Nav_Help": "Help",
 	"VRMonitor_Nav_Developer": "Developer",
 
+	"Settings_ControllerSettings": "Controller Settings",
+	"Settings_Controller_ShowBindingCallouts": "Show Binding On Controllers",
+	"Settings_Controller_ShowBindingCalloutsInVR": "Show Binding On Controllers in VR",
+	"Settings_Controller_AdvancedControllerSettings": "Manage Controller Bindings",
+	"Settings_Controller_ControllerBindingPrompt": "Controller Binding",
+	"Settings_Controller_DefaultBinding": "Default",
+	"Settings_Controller_CustomBinding": "Custom",
+	"Settings_ThumbstickDeadzone_Text": "Thumbstick Deadzone",
+	"Settings_ThumbstickDeadzone_Desc": "Adjust the deadzone on all thumbsticks.",
+
+	"Settings_Loading_CurrentBinding": "Loading current binding...",
+
+	"Settings_NeedSteamTo_ViewAndEditBindings": "Launch Steam to view and edit bindings.",
+
 	"VRMonitor_Overview_SystemStatus_Title": "System Status",
 
 	"VRMonitor_Overview_DeviceStatus_Title": "Device Status",
@@ -42,10 +56,13 @@
 
 	"Settings_SelectAnOption": "Select an option...",
 
+	"Settings_BluetoothSettings": "Bluetooth Settings",
+	"Settings_BaseStationSettings": "Base Station Settings",
+
 	"Settings_Audio_Playback_Automatic_Label": "Audio output device",
 	"Settings_Audio_Recording_Automatic_Label": "Audio input device",
-	"Settings_Audio_Automatic_Off": "HMD",
-	"Settings_Audio_Automatic_On": "Manual",
+	"Settings_Audio_Headset": "Headset",
+	"Settings_Audio_Manual": "Manual",
 	"Settings_Audio_Mirroring_Label": "Audio mirroring",
 	"Settings_Audio_Default": "Default",
 	"Settings_Audio_Current_Setting_Unknown": "(Currently selected device is not present)",
@@ -64,6 +81,7 @@
 	"Settings_SectionTitle_Home": "Home",
 	"Settings_SectionTitle_PlayArea": "Play Area",
 	"Settings_SectionTitle_BaseStation": "Base Stations",
+	"Settings_SectionTitle_Controller": "Controllers",
 
 	"Advanced_AllowSavingOfTimingInfo": "Allow saving of timing info",
 	"Advanced_AutoSaveTimingInfoOnExit": "Auto-save timing info on exit",
@@ -84,36 +102,36 @@
 	"MenuAction_ResetDismissableWarnings": "Reset Warnings",
 	"MenuAction_SetConfigDirectory": "Set Config Directory",
 	"MenuAction_SetLogDirectory": "Set Log Directory",
-	"Settings_Advanced_AllowSupersampleFiltering": "Enable Advanced Supersample Filtering",
+	"Settings_Advanced_AllowSupersampleFiltering": "Advanced Supersample Filtering",
 	"Settings_Advanced_Paths_Header": "Paths",
 	"Settings_Advanced_Reset_Header": "Reset",
 	"Settings_Advanced_Status_Header": "Status Check",
-	"Settings_ArcadeMode": "Enable Arcade Mode",
+	"Settings_ShowSettingsInDashboard": "Settings (VR Dashboard)",
 	"Settings_CheckForSteam": "Check for Steam",
 	"Settings_DebugInputBindings": "Enable debugging options in the input binding user interface",
-	"Settings_DoNotFadeToGrid": "Do not fade to grid when app hangs",
-	"Settings_EnableDashboard": "Enable VR Dashboard",
-	"Settings_HomeAppCheck": "Enable SteamVR Home",
+	"Settings_FadeToGrid": "Fade To Grid on app hang",
+	"Settings_EnableDashboard": "VR Dashboard",
+	"Settings_HomeAppCheck": "SteamVR Home",
 	"Settings_HomeAppDesc": "Enjoy virtual environments, social features, and more.",
 	"Settings_LargeSpace": "Large Space",
 	"Settings_LockedModeCheck": "Locked Mode",
 	"Settings_LockedModeDesc": "Allow rendering to headset while computer is locked.",
+	"Settings_PauseOnStandby": "Pause VR when headset is idle",
+	"Settings_PauseOnLocked": "Pause VR when computer is locked",
+
 	"Settings_MediumSpace": "Medium Space",
 	"Settings_NightModeCheck": "Night Mode",
 	"Settings_NightModeDesc": "Dim the headset until 5:00 AM (or until SteamVR is restarted).",
-	"Settings_PauseOnStandby": "Pause rendering when headset is idle",
 	"Settings_ShowPlaylistMenu": "Show Playlist Menu",
 	"Settings_SmallSpace": "Small Space",
-	"Settings_StartSteamVROnAppLaunch": "Start SteamVR when an application starts",
 	"Settings_StatusWindowAlwaysOnTop_Info": " ",
-	"Settings_StatusWindowAlwaysOnTop_Text": "Always on Top",
+	"Settings_StatusWindowAlwaysOnTop_Text": "SteamVR Always on Top",
 	"Settings_StatusWindowMinimizeToTray_Text": "When minimized, SteamVR Status minimizes to the system tray",
 	"Settings_SuppressWarnings_Text": "Suppress warnings and alerts when SteamVR Status is minimized",
 	"StatusCheckInterval_Never": "Never",
 	"StatusCheckInterval_Normal": "Normal (1 sec)",
 	"StatusCheckInterval_Often": "Often (100 msec)",
 	"StatusCheckInterval_Seldom": "Seldom (5 sec)",
-	"Settings_ThumbstickDeadzone_Text": "Thumbstick Deadzone",
 
 	"Settings_KnockKnock_Button": "Knock Knock",
 	"Settings_KnockKnock_Desc": "This allows people outside of VR to get the headset user's attention",
@@ -128,8 +146,8 @@
 	"Settings_Chaperone_Style_4": "Floor only",
 
 	"Settings_Video_RefreshRate_Header": "Refresh Rate",
-	"Settings_Video_RefreshRate_HzSuffix": " hz",
-	"Settings_Video_RefreshRate_Label_Hz": "Refresh Rate (hz)",
+	"Settings_Video_RefreshRate_HzSuffix": " Hz",
+	"Settings_Video_RefreshRate_Label_Hz": "Refresh Rate (Hz)",
 	"Settings_Video_RefreshRate_NotFound": "Additional refresh rates are supported by your HMD, but were not detected by the graphics driver. Please verify your headset firmware and graphics drivers are up to date.",
 	"Settings_Video_RefreshRate_NotAvailableExtended": "Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode.",
 	"Settings_Video_RefreshRate_EnableDirectModeAction": "Enable Direct Mode",
@@ -142,17 +160,15 @@
 	"Settings_Advanced_MotionSmoothing_Disabled": "Motion Smoothing requires asynchronous reprojection support.",
 	"Settings_Advanced_Supersampling_Auto": "Auto",
 	"Settings_Advanced_Supersampling_Custom": "Custom",
-	"Settings_Advanced_Supersampling_Header": "Application Resolution",
+	"Settings_Advanced_Supersampling_Header": "Render Resolution",
 	"Settings_Advanced_Supersampling_Warning": "The setting below overrides the automated setting and affects all applications. To change the resolution for a specific application, visit Applications Settings.",
 	"Settings_Advanced_Supersampling_WidthByHeight": "%1$s × %2$s",
 	"Settings_Advanced_SupersamplingManualOverride": "Enable resolution adjustments",
 	"Settings_Advanced_Supersampline_ResolutionPerEye": "Resolution Per Eye",
-	"Settings_Advanced_Supersampline_ResetResolution": "Reset Resolution To Default",
 	"Explanation_Supersampling_Header": "SteamVR automatically sets your application resolution based on the performance of your GPU.",
 	"Explanation_Supersampling": "*Some applications may need to be restarted for settings to take effect.",
 	"Explanation_SupersamplingFiltering": "Supersampling Filtering Options:",
 	"Explanation_Supersampling_ResolutionPerEye": "Resolution Per Eye",
-	"Settings_PerApplication_Header": "Create unique rendering settings for specific applications",
 	"Settings_PerApplication_ChooseApplication": "Select an application",
 	"Settings_PerApplication_AppResTitle": "Custom Resolution Multiplier",
 	"Settings_PerApplication_AppResHeader": "This setting is a multiplier on top of the current global application resolution setting on the %1$s tab to the left. This application may need to be restarted for settings to take effect. (Default is 100%)",
@@ -182,11 +198,13 @@
 	"Settings_Camera_AllowCameraForRoomView": "Enable Room View",
 	"Settings_Camera_AllowCameraForRoomView_Desc": "Access Room View at any time by double clicking the System button",
 	"Settings_Camera_Compatibility": "Camera rate",
-	"Settings_Camera_Rate_Hz": "Camera Rate (hz)",
+	"Settings_Camera_Rate_Hz": "Camera Rate (Hz)",
 	"Settings_Camera_CompatibilityExplanation": "If you experience a loss of tracking you may want to set a lower Camera Rate, disable the camera, or try a different USB port.",
 
 	"Advanced_Appearance": "Appearance",
 	"Settings_Appearance_Background": "Background",
+	"Settings_Appearance_Background_NoSteam": "Launch Steam to see any any additional backgrounds.",
+	"Settings_Appearance_Background_Select": "Change Background",
 	"Settings_Appearance_BackgroundDesc": "Pick a background for the default space",
 
 	"Settings_Appearance_UseDomeProjection": "Use Dome Projection",
@@ -195,8 +213,9 @@
 	"Settings_Appearance_DomeCameraHeightDesc": "Adjusts the height of the camera relative to the background",
 	"Settings_Appearance_DomeCameraRadius": "Dome Radius",
 	"Settings_Appearance_DomeCameraRadiusDesc": "Changes the size of the dome.",
-	"Settings_Appearance_PlayAreaColor": "Play Area",
+	"Settings_Appearance_ResetDomeProjectionSettings": "Reset Dome Projection to Default",
 	"Settings_Appearance_PlayAreaColorDesc": "Adjust the style of your play area. You will see this when games are loading, or if you have disabled SteamVR Home Beta",
+	"Settings_Appearance_PlayArea_FloorColor": "Play Area Floor Color",
 	"Settings_Appearance_MoreEnvironments": "Get more SteamVR Home Environments",
 
 	"Settings_Power_ReturnToWatchdogTimeout": "Exit SteamVR after",
@@ -211,13 +230,14 @@
 
 	"Settings_General_Cancel": "Cancel",
 	"Settings_General_Confirm": "Confirm",
+	"Settings_General_Close": "Close",
 	"Settings_General_CalibrateThumbstick": "Calibrate",
 	"Settings_General_NotEnoughSamples" : "Please press up on the thumbstick at least %1$s more times to complete calibration.",
-	"Settings_General_InviteMoreSamples" : "Calculated angle of %1$s degrees. Keep pressing up to refine that value or press Confirm to accept this calibration.",
-	"Settings_General_LeftThumbstickAngle": "Left Thumbstick Angle: %1$s degrees",
-	"Settings_General_RightThumbstickAngle": "Right Thumbstick Angle: %1$s degrees",
+	"Settings_General_InviteMoreSamples" : "Calculated angle of %1$s°. Keep pressing up to refine that value or press Confirm to accept this calibration.",
+	"Settings_General_LeftThumbstickAngle": "Left Thumbstick Angle: %1$s°",
+	"Settings_General_RightThumbstickAngle": "Right Thumbstick Angle: %1$s°",
 
-	"Settings_Dashboard_ShowProgressIndicator" : "Show progress indicator for long press actions",
+	"Settings_Dashboard_ShowProgressIndicator" : "Long-press progress indicator",
 
 	"SettingsTime_5s": "5 Seconds",
 	"SettingsTime_30s": "30 Seconds",
@@ -232,6 +252,7 @@
 	"Settings_Appearance_CycleBackgroundImageTimeSec": "Change backgound after:",
 	"Settings_Chaperone_BoundsColor": "Color",
 	"Settings_Chaperone_BoundsTransparency": "Transparency",
+	"Settings_Chaperone_Color": "Chaperone Color",
 
 	"Settings_Appearance_Controller": "Change your controller model",
 	"Settings_Appearance_Base": "Change your base station model",
@@ -240,8 +261,9 @@
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOn": "Always show floor bounds",
 	"Settings_Appearance_Chaperone_CollisionBoundsGroundPerimeterOnDesc": " ",
 
-	"Settings_Connecting": "Waiting for SteamVR to start...",
+	"Settings_Loading": "Loading...",
 	"Settings_ResetToDefault": "Reset To Default",
+	"Settings_ResetPageToDefault": "Reset Page To Default",
 
 	"Settings_ToggleButton_On": "On",
 	"Settings_ToggleButton_Off": "Off",
@@ -272,6 +294,33 @@
 	"CameraRoomViewMode_VideoOpaque": "Opaque Pass-Through",
 
 	"Settings_MustRestart_Description": "SteamVR must be restarted for some changes to take effect.",
-	"Settings_MustRestart_RestartSteamVR_Button": "Restart SteamVR"
+	"Settings_MustRestart_RestartSteamVR_Button": "Restart SteamVR",
 
+	"Settings_NotSupported": "Not Supported",
+
+	"Settings_AdvancedSettings": "Advanced Settings",
+	"Settings_Show": "Show",
+	"Settings_Hide": "Hide",
+	"Settings_ViveTracker": "Vive Tracker",
+	"Settings_ViveTrackers": "Vive Trackers",
+
+	"Settings_ViveTracker_Role": "Tracker Role",
+	"Settings_ViveTracker_Hand": "Hand",
+	"Settings_ViveTracker_Identify_NotConnected": "Vive Tracker isn't connected.",
+	"Settings_ViveTracker_Identify_NotIdentifiable": "Vive Tracker isn't capable of identification.",
+	"Settings_ViveTracker_Connected": "Connected",
+	"Settings_ViveTracker_Disconnected": "Disconnected",
+
+	"Settings_PerApplication_VideoSettings": "Per-Application Video Settings",
+
+	"Settings_ActiveController": "Active Controller",
+	"Settings_EditBinding": "Edit This Binding",
+	"Settings_EditBinding_ChooseAnother": "Choose Another",
+	"Settings_ShowLegacyBindingsEditor": "Show Legacy Bindings Editor",
+	"Settings_ManageVideoSettingsForApp": "Manage Video Settings For:",
+	"Settings_ManageControllerBindingSettingsForApp": "Manage Controller Bindings For:",
+	"Settings_ActiveControllerBinding": "Active Controller Binding",
+	"Settings_ActiveBinding": "Active Binding",
+	"Settings_ShowThumbstickSettings": "Edit Thumbstick Settings",
+	"Settings_ThumbstickSettings": "Thumbstick Settings"
 }
