--- a/content/vrmonitor/translations/vrmonitor_errors_japanese.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_japanese.txt
@@ -579,7 +579,7 @@
 "[english]Warning_DismissableWarning_BasestationsTooFarApart_Description"	"Your base stations are farther apart than recommended. For the best experience, consider repositioning them so they're no more than 5.5 meters (18 feet) apart. "
 "Warning_DismissableWarning_OpticalBasestationSyncWarning_Header"	"ベースステーションエラー"
 "[english]Warning_DismissableWarning_OpticalBasestationSyncWarning_Header"	"Base Station Error"
-"Warning_DismissableWarning_OpticalBasestationSyncWarning_Description"	"二つのベースステーション間の視界を防ぐ物があるかもしれません。セッションの間に繰り返しこの警告が表示される場合は、ケーブルでの同期をお試しください。"
+"Warning_DismissableWarning_OpticalBasestationSyncWarning_Description"	"ベースステーション間の視界を遮る物があるかもしれません。セッションの間に繰り返しこの警告が表示される場合は、ケーブルでの同期をお試しください。"
 "[english]Warning_DismissableWarning_OpticalBasestationSyncWarning_Description"	"There may be something blocking line of sight between your base stations. If this warning persists between sessions you might consider switching to cabled sync."
 "Warning_DismissableWarning_BasestationSingleBaseModeHint_Header"	"一台のベースステーションのみ検出"
 "[english]Warning_DismissableWarning_BasestationSingleBaseModeHint_Header"	"Only one base station detected"
@@ -677,7 +677,7 @@
 "[english]Warning_DismissableWarning_SomeDisplaysAreMirroring_Description"	"Your display appears to be set to duplicate its content. This might impact your graphics performance, or even render your headset's display unusable."
 "Warning_DismissableWarning_UnknownHardwareDetected_Header"	"新しいデバイスが検出されました"
 "[english]Warning_DismissableWarning_UnknownHardwareDetected_Header"	"New Device Detected"
-"Warning_DismissableWarning_UnknownHardwareDetected_Description"	"ファームウェアマニフェストの登録が無いハードウェアが検出されました。"
+"Warning_DismissableWarning_UnknownHardwareDetected_Description"	"新しいハードウェアです！SteamVRで適切に検出できるよう、このデバイスのセットアップ手順を確認してください。"
 "[english]Warning_DismissableWarning_UnknownHardwareDetected_Description"	"Congrats on the new hardware! Please review the setup instructions for this device so SteamVR can properly detect it."
 "Warning_DismissableWarning_WindowsAeroDisabled_Header"	"パフォーマンス最適化"
 "[english]Warning_DismissableWarning_WindowsAeroDisabled_Header"	"Performance Optimization"
@@ -1265,5 +1265,7 @@
 "[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237"
 "Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"サポートが終了したデバイス"
 "[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"Device No Longer Supported"
+"Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>お使いの試用版の%1 のサポートが終了しました。</font> <br><br> このデバイスは今後ファームウェアアップデートを受け取らず、機能が低下する可能性があります。できるだけ早く交換してください。<br><br>（hwid: %2）"
+"[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>Your pre-production %1 is no longer supported.</font> <br><br> This device will no longer receive firmware updates, and diminished functionality is expected. Please replace at your earliest convenience. <br><br>(hwid: %2)"
 }
 }
