--- a/content/vrmonitor/translations/vrmonitor_finnish.txt
+++ b/content/vrmonitor/translations/vrmonitor_finnish.txt
@@ -2243,6 +2243,8 @@
 "[english]MenuAction_WebDevTools"	"Web Dev Tools"
 "MenuAction_WebConsole"	"Web-konsoli"
 "[english]MenuAction_WebConsole"	"Web Console"
+"MenuAction_OverlayViewer"	"Peitetason näkymä"
+"[english]MenuAction_OverlayViewer"	"Overlay Viewer"
 "MenuAction_WebDevToolsPlaceholder"	"Instansseja ei löytynyt"
 "[english]MenuAction_WebDevToolsPlaceholder"	"No Instances Found"
 "MessageBox_OpenWirelessSettings"	"Bluetooth-asetukset"
@@ -2251,6 +2253,8 @@
 "[english]FirmwareWizard_DeviceOverview_FailedToUpdate"	"Failed To Update"
 "FirmwareWizard_DeviceOverview_LookingForDevice"	"Etsitään laitetta...."
 "[english]FirmwareWizard_DeviceOverview_LookingForDevice"	"Looking For Device...."
+"FirmwareWizard_DeviceOverview_WirelessServicesRequired"	"Päivitys vaatii langatonta yhteyttä"
+"[english]FirmwareWizard_DeviceOverview_WirelessServicesRequired"	"This Update requires Wireless Services"
 "FirmwareWizard_WirelessServicesRequired_Title"	"Päivitä tukiasema"
 "[english]FirmwareWizard_WirelessServicesRequired_Title"	"Update Base Station"
 "FirmwareWizard_WirelessServicesRequired"	"Bluetooth-palvelun tulee olla käytössä, jotta tukiasema voidaan päivittää langattomasti.\n\nOta SteamVR Bluetooth -palvelu käyttöön.\n"
@@ -2263,8 +2267,12 @@
 "[english]FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Device Update"
 "BS20_ConfigureChannel_VisibleNowInTracking"	"Tukiasemat näkyvät nyt tässä seurantaistunnossa."
 "[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session."
+"BS20_ConfigureChannel_ObservedInTracking"	"Havaittu aiemmassa seurantaistunnossa."
+"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session."
 "BS20_ConfigureChannel_Identify"	"Klikkaa tunnistaaksesi tukiaseman."
 "[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station."
+"BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 vaatii laitepäivityksen, jotta laitteen tunnistusta voidaan käyttää."
+"[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Tukiasemat näkyvät nyt tässä seurantaistunnossa."
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session."
 "Monitor_RestartRequestedDialog_Title"	"Ajurin %1 käyttöönotto edellyttää uudelleenkäynnistystä"
@@ -2277,6 +2285,8 @@
 "[english]Monitor_RestartRequestedDialog_Restart"	"Restart SteamVR"
 "Monitor_RestartRequestedDialog_Quit"	"Sulje SteamVR"
 "[english]Monitor_RestartRequestedDialog_Quit"	"Quit SteamVR"
+"WorkshopUpload_Error_SteamClientNotFound"	"SteamVR Workshop -lähetystyökalua ei voitu käynnistää, koska Steam-sovellus ei ole käynnissä."
+"[english]WorkshopUpload_Error_SteamClientNotFound"	"Cannot start the SteamVR Workshop Uploader because the Steam Client is not running."
 "BS20_ConfigureChannel_FirmwareUpdateRequired"	"%1 tarvitsee päivityksen kanava-asetusten muokkaamiseksi."
 "[english]BS20_ConfigureChannel_FirmwareUpdateRequired"	"%1 requires a device update to enable channel configuration."
 "BS20_ConfigureChannel_ProgressConnecting"	"\nYhdistetään tukiasemaan...\n"
@@ -2307,6 +2317,8 @@
 "[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
 "Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Korjaa tukiaseman normaalia seurantaa häiritsevä keskeytetty tai peruutettu päivitys."
 "[english]Settings_BaseStation_ContinueBaseStationUpdate_Explanation"	"Fix an interrupted or cancelled base station update that is preventing it from tracking normally."
+"FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"Tämä tukiasema pitää löytää uudelleen optisesti käynnistämällä SteamVR uudelleen ennen kuin päivitystä jatketaan."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_NonceRejected"	"This Base Station needs to be rediscovered optically by a restart of SteamVR before the update can proceed."
 "FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"Tämä tukiasema pitää käynnistää uudelleen ja se pitää löytää uudelleen optisesti käynnistämällä SteamVR uudelleen ennen kuin päivitystä jatketaan. Irrota ja kytke tukiaseman virtajohto uudelleen ennen kuin jatkat."
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_PairingLockout"	"This Base Station needs to be power cycled and rediscovered optically by a restart of SteamVR before the update can proceed. Please unplug and then replug the Base Station's power cable."
 "FirmwareWizard_UpdateBasestationWireless_Fail_VersionRejected"	"Päivitys keskeytetty. Tässä tukiasemassa on jo asennettuna uudempi päivitys. Irrota ja kytke tukiaseman virtajohto uudelleen."
@@ -2337,12 +2349,16 @@
 "[english]VRApplicationError_None"	"No Error"
 "VRApplicationError_AppKeyAlreadyExists"	"Sovellus on jo rekisteröity"
 "[english]VRApplicationError_AppKeyAlreadyExists"	"Application is already registered"
+"VRApplicationError_NoManifest"	"Sovelluksen manifesti puuttuu"
+"[english]VRApplicationError_NoManifest"	"No application Manifest"
 "VRApplicationError_NoApplication"	"Ei sovellusta"
 "[english]VRApplicationError_NoApplication"	"No application"
 "VRApplicationError_InvalidIndex"	"Epäkelpo hakemisto"
 "[english]VRApplicationError_InvalidIndex"	"Invalid Index"
 "VRApplicationError_UnknownApplication"	"Tuntematon sovellus"
 "[english]VRApplicationError_UnknownApplication"	"Unknown application"
+"VRApplicationError_IPCFailed"	"Emme saa yhteyttä sovellukseen"
+"[english]VRApplicationError_IPCFailed"	"Unable to request application"
 "VRApplicationError_ApplicationAlreadyRunning"	"Sovellus on jo käynnissä"
 "[english]VRApplicationError_ApplicationAlreadyRunning"	"Application is already running"
 "VRApplicationError_InvalidManifest"	"Virheellinen manifesti"
@@ -2363,12 +2379,18 @@
 "[english]VRApplicationError_IsTemplate"	"This is a template application"
 "VRApplicationError_SteamVRIsExiting"	"SteamVR poistuu"
 "[english]VRApplicationError_SteamVRIsExiting"	"SteamVR is exiting"
+"VRApplicationError_BufferTooSmall"	"Annettu puskuri oli liian pieni"
+"[english]VRApplicationError_BufferTooSmall"	"Provided buffer was too small"
 "VRApplicationError_PropertyNotSet"	"Ominaisuutta ei ole asetettu"
 "[english]VRApplicationError_PropertyNotSet"	"Property was not set"
 "VRApplicationError_UnknownProperty"	"Tunnistamaton ominaisuus"
 "[english]VRApplicationError_UnknownProperty"	"Unknown property"
 "VRApplicationError_InvalidParameter"	"Parametri ei kelpaa"
 "[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
+"Settings_Advanced_RefreshRate_NotFound"	"<b>HUOMAA:</b> virutuaalitodellisuuslasisi tukevat lisäpäivitystiheyttä, mutta grafiikka-ajurisi ei pysty havaitsemaan sitä. Varmista, että virtuaalitodellisuuslasisi laiteohjelmisto ja grafiikka-ajurisi ovat ajan tasalla."
+"[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but were not detected by the graphics driver. Please verify your headset firmware and graphics drivers are up to date."
+"Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>HUOMAA:</b> virutuaalitodellisuuslasisi tukevat lisäpäivitystiheyttä, mutta SteamVR ei voi hallinnoida päivitystiheyttä, kun virtuaalitodellisuuslasit ovat jatketussa tilassa. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Ota suora tila käyttöön.</span></a>"
+"[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 "oculus_display_lost"	"Oculuksen yhteys näyttöön katkesi. Käynnistä uudelleen, kun olet tarkistanut VR-lasiesi kytkennät."
 "[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
 "BS20_UpdateRecovery_FoundStations"	"Etsintä valmis.<br><br><font color=#ffffff>Näiden tukiasemien päivityksiä ei ole saatu päätökseen.<br><br>Valitse tukiasema ja paina 'Palauta laite' jatkaaksesi.</font>"
@@ -2407,6 +2429,10 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS20"	"Base Station successfully updated."
 "BS20_ConfigureChannel_ConflictLegend"	"Kanavakonflikti toisen tukiaseman kanssa."
 "[english]BS20_ConfigureChannel_ConflictLegend"	"Channel conflict with another Base Station."
+"BS20_ConfigureChannel_ErrorLegend"	"Saat lisätietoa klikkaamalla kanavan linkkiä."
+"[english]BS20_ConfigureChannel_ErrorLegend"	"Click on channel link for more information."
+"BS20_ConfigureChannel_CancelledConnection"	"%1 yhteys peruttu. Klikkaa kanavan linkkiä ja yritä uudelleen."
+"[english]BS20_ConfigureChannel_CancelledConnection"	"%1 connection cancelled. Click channel link to try again."
 "MessageBox_RemindMeLater"	"Muistuta myöhemmin"
 "[english]MessageBox_RemindMeLater"	"Remind Me Later"
 "FirmwareWizard_Nag_Title"	"Suositeltu laitteistopäivitys"
@@ -2429,6 +2455,8 @@
 "[english]BS_PowerManagement_FullStandby"	"Sleep"
 "BS_PowerManagement_FullStandby_Explanation"	"Tukiasema laittaa laserit ja moottorit pois päältä."
 "[english]BS_PowerManagement_FullStandby_Explanation"	"Base Stations will power off their lasers and motors."
+"BS_PowerManagement_ConnectionFailureLegend"	"Yhteyden muodostus epäonnistui. Klikkaa \"Päivitä\" ja yritä uudelleen."
+"[english]BS_PowerManagement_ConnectionFailureLegend"	"Connection failure. Click 'Refresh' to try again."
 "BS20_UpdateRecovery_BluetoothRequired"	"Päivityksen palauttaminen vaatii Bluetooth-yhteyden.\n\nAseta Bluetooth-yhteys päälle asetuksista."
 "[english]BS20_UpdateRecovery_BluetoothRequired"	"Update recovery requires Bluetooth communication to be enabled.\n\nPlease enable Bluetooth communication in Settings."
 "BaseStation_Mode_Text"	"Tila %1"
@@ -2449,10 +2477,20 @@
 "[english]BS20_ConfigureChannel_AutomaticConfiguration"	"Automatic Configuration"
 "BS20_ConfigureChannel_AutoConfig_NoChannelConflictsFound"	"Kanavien välillä ei ole konflikteja."
 "[english]BS20_ConfigureChannel_AutoConfig_NoChannelConflictsFound"	"There are no channel conflicts."
+"BS20_ConfigureChannel_AutoConfig_NoFreeChannels"	"Ei vapaita kanavia, joilla voi ratkaista %1 mahdollista kanavakonfliktia. Sinun pitää ehkä määritellä kanavat manuaalisesti."
+"[english]BS20_ConfigureChannel_AutoConfig_NoFreeChannels"	"There are no free channels to resolve %1 potential channel conflicts. You may need to manually configure channels."
+"BS20_ConfigureChannel_AutoConfig_NotEnoughFreeChannels"	"Vapaat kanavat riittävät ratkaisemaan vain %1/%2 mahdollista kanavakonfliktia. Jatketaanko ja ratkaistaanko ongelmat?"
+"[english]BS20_ConfigureChannel_AutoConfig_NotEnoughFreeChannels"	"There are only enough free channels to resolve %1 out of %2 potential channel conflicts. Continue and resolve conflicts?"
+"BS20_ConfigureChannel_AutoConfigContinue"	"%1 mahdollista kanavakonfliktia voidaan ratkaista automaattisesti määrittämällä niiden kanavat uudelleen. Jatketaanko ja ratkaistaanko ongelmat?"
+"[english]BS20_ConfigureChannel_AutoConfigContinue"	"There are %1 potential channel conflicts that can be automatically resolved by re-assigning their channels. Continue and resolve conflicts?"
 "BS20_ConfigureChannel_AutoConfig_SuccessfulCompletion"	"Automaattinen määrittely suoritettu.\n\nKanavien välillä ei ole konflikteja."
 "[english]BS20_ConfigureChannel_AutoConfig_SuccessfulCompletion"	"Automatic Configuration completed.\n\nThere are no channel conflicts."
+"BS20_ConfigureChannel_AutoConfig_Incomplete"	"Automaattinen määritys tehty.\n\nJäljellä on %1 mahdollista kanavakonfliktia. Sinun pitää ehkä määritellä kanavat manuaalisesti."
+"[english]BS20_ConfigureChannel_AutoConfig_Incomplete"	"Automatic Configuration completed.\n\nThere are %1 remaining potential channel conflicts. You may need to manually configure channels."
 "BS20_ConfigureChannel_AutoConfig_UnknownChannels"	"%1:n tukiaseman kanavia ei voitu määrittää. Tämä saattaa aiheuttaa konflikteja kanavien välillä.\n"
 "[english]BS20_ConfigureChannel_AutoConfig_UnknownChannels"	"There are %1 Base Stations whose channels could not be determined that may result in potential channel conflicts.\n"
+"BS20_ConfigureChannel_ChannelConfigurationFailure"	"%1 ei hyväksynyt vaadittua kanavan määritystä."
+"[english]BS20_ConfigureChannel_ChannelConfigurationFailure"	"%1 failed to accept the requested channel configuration."
 "BS20_ConfigureChannel_ScanForMore"	"Etsi lisää"
 "[english]BS20_ConfigureChannel_ScanForMore"	"Scan For More"
 "BS20_ConfigureChannel_Apply"	"Käytä"
@@ -2471,6 +2509,8 @@
 "[english]BS20_ConfigureChannel_ConflictOnChannel"	"Potential conflict on Channel %1"
 "BS20_ConfigureChannel_NoConflictOnChannel"	"Ei konflikteja kanavalla %1"
 "[english]BS20_ConfigureChannel_NoConflictOnChannel"	"No conflict on Channel %1"
+"BS20_ConfigureChannel_ProgressScanComplete"	"Skannaus suoritettu.\n\nKlikkaa kanavan linkkiä, jotta voit muuttaa sitä."
+"[english]BS20_ConfigureChannel_ProgressScanComplete"	"Scan Completed.\n\nClick on a channel link to change it."
 "BS20_ConfigureChannel_ProgressScanNoStationsFound"	"Etsintä valmis.\n\nLähellä ei havaittu lähettäviä 2.0 tukiasemia."
 "[english]BS20_ConfigureChannel_ProgressScanNoStationsFound"	"Scan Completed.\n\nThere are no broadcasting 2.0 Base Stations within your proximity."
 "BS20_ConfigureChannel_ProgressScanning"	"Etsitään tukiasemia...\n\n%1 sekuntia jäljellä."
@@ -2543,7 +2583,15 @@
 "[english]BS_PromotePowerManagement_Explanation"	"SteamVR can power manage your Base Stations.<br><br>Power managed Base Stations go into standby mode when SteamVR is not in use and wake up again when SteamVR starts.<br>"
 "BS_PromotePowerManagement_Enable"	"Ota tukiaseman virranhallinta käyttöön *"
 "[english]BS_PromotePowerManagement_Enable"	"Enable Base Station Power Management *"
+"BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* EI SUOSITELLA, jos useita SteamVR-käyttäjiä on tilassa, jossa sovelletaan seurantateknologiaa</font>"
+"[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
 "BS_PromotePowerManagement_ExitNow"	"Poistu nyt (%1)"
 "[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
+"FirmwareWizard_UpdateType_WatchmanV3PeripheralUpdate"	"Lisälaitteen päivitys"
+"[english]FirmwareWizard_UpdateType_WatchmanV3PeripheralUpdate"	"Peripheral Device Update"
+"BS_PowerManagement_Identify"	"Klikkaa tunnistaaksesi tukiaseman."
+"[english]BS_PowerManagement_Identify"	"Click to identify Base Station."
+"BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 vaatii laitepäivityksen, jotta laitteen tunnistusta voidaan käyttää."
+"[english]BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 }
 }
