--- a/content/vrmonitor/translations/vrmonitor_portuguese.txt
+++ b/content/vrmonitor/translations/vrmonitor_portuguese.txt
@@ -2291,7 +2291,7 @@
 "[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session."
 "BS20_ConfigureChannel_Identify"	"Clica para identificar estação-base."
 "[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station."
-"BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requer uma atualização para possibilitar a identificação de dispositivos."
+"BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requer uma atualização para possibilitar a identificação."
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 "BS_PowerManagement_VisibleNowInTracking"	"Visível agora nesta sessão de deteção."
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session."
@@ -2407,9 +2407,9 @@
 "[english]VRApplicationError_UnknownProperty"	"Unknown property"
 "VRApplicationError_InvalidParameter"	"Parâmetro inválido"
 "[english]VRApplicationError_InvalidParameter"	"Invalid parameter"
-"Settings_Advanced_RefreshRate_NotFound"	"<b>ATENÇÃO:</b> O teu headset suporta outras taxas de atualização, mas não foram detetadas pelo driver da placa gráfica. Por favor, verifica se o firmware e os drivers da placa gráfica estão atualizados."
+"Settings_Advanced_RefreshRate_NotFound"	"<b>ATENÇÃO:</b> O teu headset é compatível com outras taxas de atualização, mas não foram detetadas pelo driver da placa gráfica. Por favor, verifica se o firmware e os drivers da placa gráfica estão atualizados."
 "[english]Settings_Advanced_RefreshRate_NotFound"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but were not detected by the graphics driver. Please verify your headset firmware and graphics drivers are up to date."
-"Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>ATENÇÃO:</b> O teu headset suporta outras taxas de atualização, mas o SteamVR não pode geri-las quando o headset está no modo expandido. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Ativa o modo direto.</span></a>"
+"Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>ATENÇÃO:</b> O teu headset é compatível com outras taxas de atualização, mas o SteamVR não pode geri-las quando o headset está no modo expandido. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Ativa o modo direto.</span></a>"
 "[english]Settings_Advanced_RefreshRate_NotAvailableExtended"	"<b>NOTE:</b> Additional refresh rates are supported by your HMD, but SteamVR cannot manage refresh rates when the HMD is in extended mode. <a href='vrmonitor://directmode/enable'><span style='color:white;'>Enable direct mode.</span></a>"
 "oculus_display_lost"	"O sistema Oculus não consegue estabelecer ligação com o ecrã. Verifica a conexão do teu headset e depois reinicia."
 "[english]oculus_display_lost"	"The Oculus system has lost its connection to the display. Please check your headset's connection and then restart."
@@ -2608,5 +2608,11 @@
 "[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
 "BS_PromotePowerManagement_ExitNow"	"Sair agora (%1)"
 "[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
+"FirmwareWizard_UpdateType_WatchmanV3PeripheralUpdate"	"Atualização de periférico"
+"[english]FirmwareWizard_UpdateType_WatchmanV3PeripheralUpdate"	"Peripheral Device Update"
+"BS_PowerManagement_Identify"	"Clica para identificar estação-base."
+"[english]BS_PowerManagement_Identify"	"Click to identify Base Station."
+"BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 requer uma atualização para possibilitar a identificação."
+"[english]BS_PowerManagement_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
 }
 }
